This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^^ -> Change
- -> Removed
! -> Note

21-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files tr-TR, ur-PK
 
21-Jan-2012 Christophe Demko
 # [#27798] Tracker #27896 messed up CSS in Hathor control panel (Andrea Tarr)
 # [#27799] Php errors in smart search content map tab in Hathor (Andrea Tarr)
 # [#27766] ACL Issues when user has edit (but not create) permission in specific categories. (Elin Waring)
 # [#27795] Strict standards: Declaration of LanguagesModelLanguage::delete() should be compatible with that of JModelAdmin::delete()
 # [#27761] No parent categories showing in one scenario (Elin Waring)

20-Jan-2012 Christophe Demko
 # [#27790] *Error on uninstalling language pack since 2.5beta

20-Jan-2012 Mark Dexter
 # [#27778] JFormField uses get_called_class method that is not compatible with PHP 5.2.4
 # [#27786] Unescaped code in com_content
 # [#27783] *JLanguage: Avoid BOM error when debug, as BOM is OK when using parse_ini
 # [#27785] Internationalization support for Joomla on SQLAzure is breaking.
 # [#27606] Code cleaning for user notes

20-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files hr-HR, cs-CZ
 # [#27782] There is an unneeded row in sample data. Thanks Elin

19-Jan-2012 Jean-Marie Simonet
 #$ [#27747] Strict standards: Module manager. Thanks Nikolai
 ^ [#27563] Author tag in xml. Thanks Brian
 # [#27467] Use the new url filtering for fields. Thanks Elin.
 ^ [#27767] Inconsistency of "Status" translation in plugin and user manager.
 # [#27771] Indicate unpublished categories in category edit drop down. Thanks Elin.

-------------------- 2.5.0 RC1 Release [18-Jan-2012] ------------------

18-Jan-2012 Christophe Demko